--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,7 @@ default: &default
 development:
   <<: *default
   database: spinsaas_development
+  host: 172.31.38.249
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
